fix overlap carousel

--- a/assets/css/real-estate.css
+++ b/assets/css/real-estate.css
@@ -76,8 +76,8 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    min-height: 50vh;
-    width: 100%;
+    min-height: 30rem;
+    height: 100%;
 }
 
 
@@ -99,7 +99,6 @@
     left: 0;
     bottom: 0;
     right: 0;
-    box-sizing: border-box;
     padding: 0;
     border: none;
     margin: auto;
@@ -115,14 +114,18 @@
 
 .app-body > .section-first > .content > .carousel > .right {
     flex: 1;
+    display: flex;
     height: 100%;
     background-color: #fffbf7;
+    box-sizing: border-box !important;
 }
 
 .app-body > .section-first > .content > .carousel > .right > div {
     font-size: 20px;
-    background-color: #fffbf7;
     padding: 2rem;
+    box-sizing: border-box;
+    background-color: #fffbf7;
+    width: 100%;
     -webkit-font-smoothing: antialiased; 
 }
 
